--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
   "main": "index.js",
   "repository": "git@github.com:Sly321/jarvil.git",
   "author": "Sven Liebig <liebigsv@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "electron": "3.0.0-beta.5"
+  }
 }
