create a runnable environment

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "jarvil",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "main.js",
   "repository": "git@github.com:Sly321/jarvil.git",
   "author": "Sven Liebig <liebigsv@gmail.com>",
   "license": "MIT",
