--- a/package.json
+++ b/package.json
@@ -9,6 +9,13 @@
     "electron": "3.0.0-beta.5"
   },
   "scripts": {
-    "start": "electron ."
+    "start": "webpack-dev-server --config ./config/webpack.dev.config.js"
+  },
+  "devDependencies": {
+    "html-webpack-plugin": "^3.2.0",
+    "webpack": "^4.16.5",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-server": "^3.1.5",
+    "webpack-merge": "^4.1.4"
   }
 }
