--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
   "name": "jarvil",
   "version": "1.0.0",
-  "main": "src/main.js",
+  "main": "src/electron/main.js",
   "repository": "git@github.com:Sly321/jarvil.git",
   "author": "Sven Liebig <liebigsv@gmail.com>",
   "license": "MIT",
   "dependencies": {},
   "scripts": {
-    "build": "yarn build:app && cross-env NODE_ENV=production electron-builder",
+    "build": "tsc -rootDir ./src/electron/ && yarn build:app && cross-env NODE_ENV=production electron-builder",
     "build:app": "cross-env NODE_ENV=production webpack --config ./config/webpack.prod.config.js",
-    "start": "cross-env NODE_ENV=development webpack-dev-server --config ./config/webpack.dev.config.js"
+    "start": "tsc -rootDir ./src/electron/ && cross-env NODE_ENV=development webpack-dev-server --config ./config/webpack.dev.config.js"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
     "electron": "3.0.0-beta.5",
     "electron-builder": "^20.28.1",
     "html-webpack-plugin": "^3.2.0",
+    "typescript": "^3.0.1",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
