--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
     "run-electron": "electron .",
     "build": "tsc && yarn build:app && cross-env NODE_ENV=production electron-builder && yarn clean:electron",
     "build:app": "cross-env NODE_ENV=production webpack --config ./config/webpack.prod.config.js",
-    "start": "tsc && cross-env NODE_ENV=development webpack-dev-server --config ./config/webpack.dev.config.js"
+    "start": "tsc && cross-env NODE_ENV=development webpack-dev-server -d --config ./config/webpack.dev.config.js"
   },
   "devDependencies": {
     "cross-env": "^5.2.0",
+    "css-loader": "^1.0.0",
     "electron": "3.0.0-beta.5",
     "electron-builder": "^20.28.1",
     "html-webpack-plugin": "^3.2.0",
+    "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
     "shx": "^0.3.2",
+    "style-loader": "^0.23.0",
+    "ts-loader": "^5.2.0",
     "typescript": "^3.0.1",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
