--- a/package.json
+++ b/package.json
@@ -5,7 +5,12 @@
   "repository": "git@github.com:Sly321/jarvil.git",
   "author": "Sven Liebig <liebigsv@gmail.com>",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "@types/react": "^16.4.14",
+    "@types/react-dom": "^16.0.7",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2"
+  },
   "scripts": {
     "clean:electron": "shx rm src/electron/*.js",
     "clean:target": "shx rm -rf dist",
