--- a/local-config/jarvil/plugins/google-search/package.json
+++ b/local-config/jarvil/plugins/google-search/package.json
@@ -1,5 +1,8 @@
 {
   "name": "google-search",
   "version": "1.0.0",
-  "main": "index.js"
+  "main": "index.js",
+  "dependencies": {
+    "opn": "^5.4.0"
+  }
 }
