--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   "dependencies": {
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
+    "@types/react-helmet": "^5.0.7",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "react-helmet": "^5.2.0"
   },
   "scripts": {
     "clean:electron": "shx rm src/electron/**/*.js",
