--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@types/react-helmet": "^5.0.7",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "typescript": "^3.0.1"
   },
   "scripts": {
     "clean:electron": "shx rm src/electron/**/*.js",
@@ -34,7 +35,6 @@
     "shx": "^0.3.2",
     "style-loader": "^0.23.0",
     "ts-loader": "^5.2.0",
-    "typescript": "^3.0.1",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
@@ -46,7 +46,7 @@
       "category": "jarvil"
     },
     "files": [
-      "src/electron/*.js",
+      "src/electron/**/*.js",
       "dist",
       "node_modules",
       "config/paths.js"
