--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "jarvil",
   "version": "1.0.0",
   "main": "src/electron/main.js",
+  "description": "a cross platform launcher written in TypeScript, extendable with plugins and themes",
   "repository": "git@github.com:Sly321/jarvil.git",
   "author": "Sven Liebig <liebigsv@gmail.com>",
   "license": "MIT",
@@ -18,6 +19,8 @@
   "scripts": {
     "clean:electron": "shx rm src/electron/**/*.js",
     "clean:target": "shx rm -rf dist",
+    "clean:modules": "shx rm -rf node_modules",
+    "clean:all": "yarn clean:target && yarn clean:electron && yarn clean:modules",
     "run-electron": "electron .",
     "build": "tsc && yarn build:app && cross-env NODE_ENV=production electron-builder && yarn clean:electron",
     "build:app": "cross-env NODE_ENV=production webpack --config ./config/webpack.prod.config.js",
@@ -44,7 +47,10 @@
   "build": {
     "appId": "jarvil",
     "mac": {
-      "category": "jarvil"
+      "category": "public.app-category.productivity"
+    },
+    "linux": {
+      "category": "Development"
     },
     "files": [
       "src/electron/**/*.js",
