--- a/package.json
+++ b/package.json
@@ -34,12 +34,12 @@
     "electron": "3.0.0-beta.5",
     "electron-builder": "^20.28.1",
     "html-webpack-plugin": "^3.2.0",
-    "node-sass": "^4.9.3",
-    "sass-loader": "^7.1.0",
-    "shx": "^0.3.2",
-    "style-loader": "^0.23.0",
-    "ts-loader": "^5.2.0",
-    "webpack": "^4.16.5",
+    "node-sass": "4.9.3",
+    "sass-loader": "7.1.0",
+    "shx": "0.3.2",
+    "style-loader": "0.23.0",
+    "ts-loader": "5.2.1",
+    "webpack": "4.20.2",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
     "webpack-merge": "^4.1.4"
