--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
         "target": "es6",
         "lib": [
             "es6",
-            "dom"
+            "dom",
+            "es2016.array.include"
         ],
         "sourceMap": false,
         "jsx": "react",
